name:                hasktemp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bigos/hasktemp#readme
license:             BSD3
license-file:        LICENSE
author:              Jacek Podkanski
maintainer:          ruby.object@googlemail.com
copyright:           Public Domain
category:            GUI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hasktemp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , MissingH
                     , directory>=1.3.2

